@@ -1,5 +1,12 @@
 2008-11-05  kitone  <kitone@gna.org>
 
+	* src/Makefile.am:
+	* src/gui/TreeViewExtensionManager.cc:
+	* src/gui/TreeViewExtensionManager.h:
+	New files.
+
+2008-11-05  kitone  <kitone@gna.org>
+
 	* src/ExtensionInfo.cc:
 	* src/ExtensionInfo.h:
 	Add get_authors function.
